@@ -119,20 +119,20 @@ abstracts = {
   ##
 
   # Generic action
-  action = "%Y* $0-";
+  action = "%Y* $0 $1-";
 
   # Own sent action
-  ownaction = "%c* $0-";
+  ownaction = "%c* $0 $1-";
 
   ##
   ## Notice (/NOTICE command)
   ##
 
   # Generic notice
-  notice = "%C- $0-";
+  notice = "%C- $0 $1-";
 
   # Own sent notice
-  ownnotice = "%g- $0";
+  ownnotice = "%g- $0 $1-";
 
 
   ##
