@@ -33,10 +33,10 @@ FORMAT_REC fecommon_silc_formats[] = {
 	{ "channel_topic", "Topic for {channel $0} is: $1", 2, { 0, 0 } },
 	{ "cmode", "channel mode/{channel $0} {mode $1} by {nick $2}", 3, { 0, 0, 0 } },
 	{ "cumode", "channel user mode/{channel $0}/{nick $1} {mode $2} by {nick $3}", 4, { 0, 0, 0, 0 } },
-	{ "action", "{action $0}", 1, { 0 } },
-	{ "notice", "{notice $0}", 1, { 0 } },
-	{ "ownaction", "{ownaction $0}", 1, { 0 } },
-	{ "ownnotice", "{ownnotice $0}", 1, { 0 } },
+	{ "action", "{action $0-}", 2, { 0, 0 } },
+	{ "notice", "{notice $0-}", 2, { 0, 0 } },
+	{ "ownaction", "{ownaction $0-}", 2, { 0, 0 } },
+	{ "ownnotice", "{ownnotice $0-}", 2, { 0, 0 } },
 	{ "invite_list", "channel {channel $0} invite list: $1", 2, { 0, 0 } },
 	{ "no_invite_list", "channel {channel $0} invite list not set", 1, { 0 } },
 	{ "ban_list", "channel {channel $0} ban list: $1", 2, { 0, 0 } },
